--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
-        rel="stylesheet">
+          rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>JS Game</title>
 </head>
 
 <body>
-
     <div class="container">
         <div class="container__contenido">
             <div class="container__informaciones">
@@ -21,10 +20,10 @@
                     <h1></h1>
                     <p class="texto__parrafo"></p>
                 </div>
-                <input type="number" min="1" max="10" class="container__input">
+                <input id="valorUsuario" type="number" min="1" max="100" class="container__input">
                 <div class="chute container__botones">
-                    <button class="container__boton">Intentar</button>
-                    <button class="container__boton" id="reiniciar" disabled>Nuevo juego</button>
+                    <button onclick="verificarIntento();" class="container__boton">Intentar</button>
+                    <button onclick="reiniciarJuego();" class="container__boton" id="reiniciar" disabled>Nuevo juego</button>
                 </div>
             </div>
             <img src="./img/ia.png" alt="Una persona mirando a la izquierda" class="container__imagen-persona" />
@@ -32,9 +31,6 @@
     </div>
 
 
-
-
     <script src="app.js" defer></script>
 </body>
-
 </html>
