Cambiar etiqueta nuevo juego

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <input id="valorUsuario" type="number" min="1" max="30" class="container__input">
                 <div class="chute container__botones">
                     <button onclick="verificarIntento();" class="container__boton">Intentar</button>
-                    <button onclick="reiniciarJuego();" class="container__boton" id="reiniciar" disabled>Nuevo juego</button>
+                    <button onclick="reiniciarJuego();" class="container__boton" id="reiniciar" disabled>Juego nuevo</button>
                 </div>
             </div>
             <img src="./img/ia.png" alt="Una persona mirando a la izquierda" class="container__imagen-persona" />
