--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="style.css">
     <title>Juego Secreto - Actualizado</title>
 </head>
-
 <body>
     <div class="container">
         <div class="container__contenido">
@@ -22,7 +21,7 @@
                 </div>
                 <input id="valorUsuario" type="number" min="1" max="30" class="container__input">
                 <div class="chute container__botones">
-                    <button onclick="verificarIntento();" class="container__boton">Intentar</button>
+                    <button onclick="verificarIntento();" class="container__boton">Intentar nuevamente:</button>
                     <button onclick="reiniciarJuego();" class="container__boton" id="reiniciar" disabled>Juego nuevo</button>
                 </div>
             </div>
